[fix] update JWT authentication mode
